<resources>
    <string name="app_name">SHP-Doctor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_id">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_password">Password field cannot be empty</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!--Strings related to Details Activity-->
    <!--<string name="title_activity_details">DetailsActivity</string>-->
    <string name="title_details_fragment">Doctor Details</string>
    <string name="name_hint">Name</string>
    <string name="contact_hint">Contact</string>
    <string name="address_hint">Address</string>
    <string name="submit_button">Submit</string>

    <!--Strings related to Navigation Drawer -->

    <string name="title_my_details">My Details</string>
    <string name="title_view_disease">View Disease</string>
    <string name="title_view_patient">View Patient</string>
    <string name="title_logout">Logout</string>
    <string name="title_appointments">My Appointments</string>

    <!--Strings related to the appointment feature-->
    <string name="title_my_appointments">My Appointments</string>
    <string name="appointment_info">Your appointments can be seen here</string>



    <!--Strings related to Logout dialog-->

    <string name="dialog_yes_button_text">Yes</string>
    <string name="dialog_no_button_text">No</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_notifications">Notifications</string>
    <string name="edit_details_edit_btn_text">Edit</string>
    <string name="edit_details_cancel_btn_text">Cancel</string>
    <string name="patient_contact_hint">Contact</string>
    <string name="prompt_email">Email</string>
    <string name="patient_address_hint">Address</string>
    <string name="edit_details_submit_btn_text">Update</string>
    <string name="disease_cell_type_tv">Disease Type:</string>
    <string name="disease_cell_name_tv">Disease Name</string>
    <string name="disease_cell_id_tv">Disease ID:</string>
    <string name="view_disease_tv_text">View Diseases</string>
    <string name="view_patient_tv_text">View Patients</string>
    <string name="patient_cell_id_tv">Patient ID:</string>
    <string name="patient_cell_name_tv">Patient Name:</string>
    <string name="patient_cell_age_tv">Patient Age:</string>
    <string name="patient_cell_contact_tv">Patient Contact:</string>
    <string name="patient_cell_address_tv">Patient Address:</string>
    <string name="patient_cell_gender_tv">Patient Gender:</string>

    <!--shared preferences strings-->
    <string name="preferencesFileKey">SHP Preferences</string>
    <string name="pref_user_email_id_key">UserEmail</string>
    <string name="pref_user_pswd_key">UserPassword</string>
    <string name="pref_user_id_key">UserID</string>
    <string name="pref_user_logged_in_status">login</string>

    <!--shared preferences user details -->
    <string name="detail_name">user_detail_name</string>
    <string name="detail_contact">user_detail_contact</string>
    <string name="detail_email">user_detail_email</string>
    <string name="detail_address">user_detail_address</string>
    <string name="details_saved_to_preferences_flag">details_saved</string>
    <string name="no_appointments_view_text">No Appointments yet</string>
    <string name="appointment_cell_id_tv">Appointment ID:</string>
    <string name="appointment_cell_date_tv">Appointment Date:</string>
    <string name="appointment_time_tv">Appointment Time:</string>
    <string name="appointment_patient_name_tv">Appointment Patient Name:</string>

</resources>
